// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerMenu component should match snapshot - DrawerMenu custom children: DrawerMenu custom children snapshot 1`] = `
<div
  className="sc-AxiKw kCnJfj"
>
  <div>
    some custom children
  </div>
</div>
`;

exports[`DrawerMenu component should match snapshot - DrawerMenu custom component: DrawerMenu custom component snapshot 1`] = `
<section
  className="sc-AxiKw kCnJfj"
>
  <ul
    className="MuiList-root MuiList-dense MuiList-padding makeStyles-padding-13"
  >
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root makeStyles-root-14 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root makeStyles-root-15"
      >
        <i
          className="sc-AxirZ chGsOB natds-icons natds-icons-outlined-action-love undefined"
          size="tiny"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
        >
          Menu Item
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root makeStyles-root-16 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root makeStyles-root-17"
      >
        <i
          className="sc-AxirZ chGsOB natds-icons natds-icons-outlined-action-love undefined"
          size="tiny"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="sc-AxjAm jLtmCw sc-AxhCb kLnmMw"
            fontFamily="\\"Roboto\\", sans-serif"
            fontSize="0.75rem"
            fontWeight={400}
          >
            Novo
          </span>
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root makeStyles-root-19 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root makeStyles-root-21"
      >
        <i
          className="sc-AxirZ chGsOB natds-icons natds-icons-outlined-action-love undefined"
          size="tiny"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="sc-AxjAm jLtmCw sc-AxhCb kLnmMw"
            fontFamily="\\"Roboto\\", sans-serif"
            fontSize="0.75rem"
            fontWeight={400}
          >
            Novo
          </span>
        </span>
      </div>
      <i
        className="sc-AxirZ chGsOB natds-icons natds-icons-outlined-navigation-arrowbottom undefined"
        size="tiny"
      />
      <span
        className="MuiTouchRipple-root"
      />
    </li>
    <li
      className="MuiListSubheader-root makeStyles-root-22 MuiListSubheader-sticky MuiListSubheader-gutters"
    >
      <span
        className="MuiTypography-root MuiTypography-caption"
      >
        section
      </span>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root makeStyles-root-23 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root makeStyles-root-24"
      >
        <i
          className="sc-AxirZ chGsOB natds-icons natds-icons-outlined-action-love undefined"
          size="tiny"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="sc-AxjAm jLtmCw sc-AxhCb kLnmMw"
            fontFamily="\\"Roboto\\", sans-serif"
            fontSize="0.75rem"
            fontWeight={400}
          >
            Novo
          </span>
        </span>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </li>
  </ul>
</section>
`;

exports[`DrawerMenu component should match snapshot - DrawerMenu list: DrawerMenu list snapshot 1`] = `
<div
  className="sc-AxiKw kCnJfj"
>
  <ul
    className="MuiList-root MuiList-dense MuiList-padding makeStyles-padding-1"
  >
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root makeStyles-root-2 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root makeStyles-root-3"
      >
        <i
          className="sc-AxirZ chGsOB natds-icons natds-icons-outlined-action-love undefined"
          size="tiny"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
        >
          Menu Item
        </span>
      </div>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root makeStyles-root-4 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root makeStyles-root-5"
      >
        <i
          className="sc-AxirZ chGsOB natds-icons natds-icons-outlined-action-love undefined"
          size="tiny"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="sc-AxjAm jLtmCw sc-AxhCb kLnmMw"
            fontFamily="\\"Roboto\\", sans-serif"
            fontSize="0.75rem"
            fontWeight={400}
          >
            Novo
          </span>
        </span>
      </div>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root makeStyles-root-7 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root makeStyles-root-9"
      >
        <i
          className="sc-AxirZ chGsOB natds-icons natds-icons-outlined-action-love undefined"
          size="tiny"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="sc-AxjAm jLtmCw sc-AxhCb kLnmMw"
            fontFamily="\\"Roboto\\", sans-serif"
            fontSize="0.75rem"
            fontWeight={400}
          >
            Novo
          </span>
        </span>
      </div>
      <i
        className="sc-AxirZ chGsOB natds-icons natds-icons-outlined-navigation-arrowbottom undefined"
        size="tiny"
      />
    </li>
    <li
      className="MuiListSubheader-root makeStyles-root-10 MuiListSubheader-sticky MuiListSubheader-gutters"
    >
      <span
        className="MuiTypography-root MuiTypography-caption"
      >
        section
      </span>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root makeStyles-root-11 MuiListItem-dense MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root makeStyles-root-12"
      >
        <i
          className="sc-AxirZ chGsOB natds-icons natds-icons-outlined-action-love undefined"
          size="tiny"
        />
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-dense"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body2"
        >
          <span
            className="MuiTypography-root MuiTypography-body2"
          >
            Menu Item
          </span>
          <span
            className="sc-AxjAm jLtmCw sc-AxhCb kLnmMw"
            fontFamily="\\"Roboto\\", sans-serif"
            fontSize="0.75rem"
            fontWeight={400}
          >
            Novo
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;
